fix: fix HomeContent title and content overflow

--- a/src/routes/Home/components/HomeContent.scss
+++ b/src/routes/Home/components/HomeContent.scss
@@ -1,4 +1,5 @@
 .container {
+  word-break: break-all;
   max-width: 100%;
 }
 
